--- a/requirements-t141798.yml
+++ b/requirements-t141798.yml
@@ -11,4 +11,4 @@ dependencies:
   - libuuid
   - subversion
 # and cmake if the system doesn't have a modern cmake installed.
-prefix: /opt/anaconda/envs/dfm_t141798
+# prefix: /opt/softwareanaconda/envs/dfm_t141798
